# cairn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  ROADMAP.md  SECURITY.md  _config.yml  deny.toml  index.html  site.css
.github/workflows/: bench.yml  ci.yml  fuzz.yml  perf.yml  release.yml  security-scan.yml
algorithms/: algorithms.css  index.html
articles/: articles.css  index.html  offline-tiles.md
articles/offline-tiles/: index.html
bench/: .gitignore  README.md
bench/compose/: docker-compose.nominatim.yml  docker-compose.pelias.yml  docker-compose.photon.yml
bench/runner/: Cargo.toml
bench/runner/src/: main.rs
bench/scripts/: 00-download.sh  10-build-cairn.sh  20-run-cairn.sh  30-run-pelias.sh  40-run-nominatim.sh  50-run-photon.sh  60-generate-queries.sh  70-bench.sh  99-teardown.sh  aggregate.sh  sample_queries.py
benchmarks/: .gitignore  EUROPE-BENCH.md  PLANET-PLAN.md  README.md  perf-baseline.json  perf-check.py  report.sh  run-recall.sh  run-rps.sh  run.sh
benchmarks/cairn/: build.sh  down.sh  up.sh
benchmarks/data/: download.sh
benchmarks/nominatim/: docker-compose.europe.yml  docker-compose.yml  up-europe.sh  up.sh
benchmarks/pelias/: docker-compose.europe.yml  docker-compose.yml  down.sh  pelias.europe.json  pelias.json  up-europe.sh  up.sh
benchmarks/photon/: Dockerfile  Dockerfile.europe  docker-compose.europe.yml  docker-compose.yml  up-europe.sh  up.sh
benchmarks/queries/: build.sh
benchmarks/results/: REPORT.md  cairn-build-germany.json  cairn-build-germany.time.txt  cairn-build-switzerland.json  cairn-build-switzerland.time.txt  cairn-build.json  cairn-build.time.txt  cairn-germany.json  cairn-recall.txt  cairn-rps-germany.txt  cairn-rps.txt  cairn.json  nominatim-rps.txt  nominatim.json  pelias-germany.json  pelias-rps-germany.txt  pelias-rps.txt  pelias.json  photon-germany.json  photon-rps-germany.txt  photon-rps.txt  photon.json
bins/cairn-build/: Cargo.toml
bins/cairn-build/src/: augment.rs  main.rs  osc.rs  replication.rs  sbom.rs  sign.rs
bins/cairn-serve/: Cargo.toml
bins/cairn-serve/src/: main.rs
cli/: cli.css  index.html
comparison/: comparison.css  index.html
crates/cairn-api/: Cargo.toml  openapi.json
crates/cairn-api/src/: federated.rs  lib.rs
crates/cairn-api/tests/: api.rs  snapshots.rs
crates/cairn-api/tests/snapshots/: snapshots__pelias_search.snap  snapshots__v1_expand.snap  snapshots__v1_layers.snap  snapshots__v1_place.snap  snapshots__v1_reverse_pip.snap  snapshots__v1_search.snap  snapshots__v1_search_empty_error.snap  snapshots__v1_structured.snap
crates/cairn-augment-wikidata/: Cargo.toml
crates/cairn-augment-wikidata/src/: lib.rs
crates/cairn-geocoder/: Cargo.toml
crates/cairn-geocoder/src/: lib.rs
crates/cairn-import-buildings/: Cargo.toml
crates/cairn-import-buildings/src/: lib.rs
crates/cairn-import-generic/: Cargo.toml
crates/cairn-import-generic/src/: lib.rs
crates/cairn-import-geonames/: Cargo.toml
crates/cairn-import-geonames/src/: lib.rs
crates/cairn-import-oa/: Cargo.toml
crates/cairn-import-oa/src/: lib.rs
crates/cairn-import-osm/: Cargo.toml
crates/cairn-import-osm/src/: flatnode.rs  lib.rs
crates/cairn-import-overture/: Cargo.toml
crates/cairn-import-overture/src/: lib.rs
crates/cairn-import-parquet/: Cargo.toml
crates/cairn-import-parquet/src/: lib.rs
crates/cairn-import-wof/: Cargo.toml
crates/cairn-import-wof/src/: lib.rs
crates/cairn-parse/: Cargo.toml
crates/cairn-parse/src/: lib.rs
crates/cairn-place/: Cargo.toml
crates/cairn-place/src/: lib.rs
crates/cairn-spatial/: Cargo.toml
crates/cairn-spatial/benches/: pip.rs
crates/cairn-spatial/src/: archived.rs  buildings.rs  lib.rs
crates/cairn-text/: Cargo.toml
crates/cairn-text/benches/: edit.rs  search.rs  trigram.rs
crates/cairn-text/src/: edit.rs  lib.rs  semantic.rs  semantic_v2.rs  stopwords.rs  trigram.rs
crates/cairn-tile/: Cargo.toml
crates/cairn-tile/src/: lib.rs
crates/cairn-wasm/: Cargo.toml
crates/cairn-wasm/src/: lib.rs
demo/: demo.css  demo.js  fixtures.json  index.html
docs/demo/: demo.css  demo.js  fixtures.json  index.html
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_admin_archive.rs  fuzz_edit_distance.rs  fuzz_manifest.rs  fuzz_trigram_extract.rs
geocoding/: geocoding.css  index.html
scripts/: publish-all.sh
security/: cves.json
