[workspace]

[package]
name = "cairn-bench"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "cairn-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hdrhistogram = "7"
rayon = "1"
url = "2"
