[package]
name = "cairn-build"
description = "Cairn bundle builder CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "cairn-build"
path = "src/main.rs"

[dependencies]
cairn-place = { workspace = true }
cairn-tile = { workspace = true }
cairn-text = { workspace = true }
cairn-spatial = { workspace = true }
cairn-import-osm = { workspace = true }
cairn-import-wof = { workspace = true }
cairn-import-oa = { workspace = true }
cairn-import-geonames = { workspace = true }
cairn-import-generic = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
blake3 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
ureq = { workspace = true }
quick-xml = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
