[package]
name = "cairn-serve"
description = "Cairn HTTP runtime server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "cairn-serve"
path = "src/main.rs"

[features]
default = []
# `cargo build --features libpostal` enables CRF address parsing in
# /v1/parse, /v1/expand, and ?autoparse=true. Requires libpostal C lib
# + ~2 GB model on the runtime host. Build-from-source instructions
# in crates/cairn-parse/src/lib.rs.
libpostal = ["cairn-api/libpostal"]

[dependencies]
cairn-api = { workspace = true }
cairn-text = { workspace = true }
cairn-spatial = { workspace = true }
cairn-tile = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
