[package]
name = "cairn-api"
description = "HTTP API handlers (axum) for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cairn-place = { workspace = true }
cairn-text = { workspace = true }
cairn-spatial = { workspace = true }
cairn-parse = { workspace = true }
cairn-tile = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
geo-types = { workspace = true }
http-body-util = "0.1"
insta = { version = "1", features = ["json", "redactions"] }
