[package]
name = "cairn-api"
description = "HTTP API handlers (axum) for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["geocoding", "geocoder", "axum", "http", "rest"]
categories = ["science::geo", "web-programming::http-server"]

[features]
default = []
# Forwards `cairn-parse/libpostal` so the libpostal-backed parse path
# powers `/v1/parse` and `?autoparse=true`. Requires the C libpostal
# library + ~2 GB language model at runtime (`LIBPOSTAL_DATA_DIR`
# env var). See crates/cairn-parse/src/lib.rs.
libpostal = ["cairn-parse/libpostal"]

[dependencies]
cairn-place = { workspace = true }
cairn-text = { workspace = true }
cairn-spatial = { workspace = true }
cairn-parse = { workspace = true }
cairn-tile = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
geo-types = { workspace = true }
http-body-util = "0.1"
insta = { version = "1", features = ["json", "redactions"] }
