[package]
name = "cairn-augment-wikidata"
description = "Wikidata enrichment augmenter for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["geocoding", "wikidata", "enrichment", "augmenter"]
categories = ["science::geo"]

[dependencies]
cairn-place = { workspace = true }
cairn-tile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
memchr = "2"
thiserror = { workspace = true }
tracing = { workspace = true }
