[package]
name = "cairn-import-geonames"
description = "Geonames TSV importer for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["geocoding", "geocoder", "geonames", "postcode", "tsv"]
categories = ["science::geo", "parser-implementations"]

[dependencies]
cairn-place = { workspace = true }
cairn-tile = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
