[package]
name = "cairn-import-osm"
description = "OpenStreetMap PBF importer for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cairn-place = { workspace = true }
cairn-tile = { workspace = true }
osmpbf = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
