[package]
name = "cairn-import-osm"
description = "OpenStreetMap PBF importer for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["geocoding", "geocoder", "osm", "openstreetmap", "pbf"]
categories = ["science::geo", "parser-implementations"]

[dependencies]
cairn-place = { workspace = true }
cairn-tile = { workspace = true }
cairn-spatial = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
osmpbf = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
