[package]
name = "cairn-import-parquet"
description = "GeoParquet loader for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["geocoding", "geocoder", "parquet", "geoparquet", "import"]
categories = ["science::geo", "parser-implementations"]

[dependencies]
cairn-place = { workspace = true }
cairn-tile = { workspace = true }
parquet = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = "54"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
