[package]
name = "cairn-import-wof"
description = "WhosOnFirst SQLite importer for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["geocoding", "geocoder", "whosonfirst", "wof", "admin"]
categories = ["science::geo", "parser-implementations"]

[dependencies]
cairn-place = { workspace = true }
cairn-tile = { workspace = true }
cairn-spatial = { workspace = true }
rusqlite = { workspace = true }
geojson = { workspace = true }
geo-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
