[package]
name = "cairn-parse"
description = "Address parsing/normalization (libpostal FFI) for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
# `libpostal` enables the FFI build; vendored libpostal sources land in Phase 4.
libpostal = []

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
