[package]
name = "cairn-parse"
description = "Address parsing/normalization (libpostal FFI) for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = []
# Enables the libpostal FFI bindings. Requires the `libpostal` C library
# headers + compiled language model files at build / runtime
# (LIBPOSTAL_DATA_DIR). See README + ROADMAP Phase 6e.
libpostal = ["dep:libpostal-sys"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
libpostal-sys = { version = "0.1", optional = true }
