[package]
name = "cairn-text"
description = "Text indexing and autocomplete (tantivy + FST) for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["geocoding", "geocoder", "tantivy", "autocomplete", "fulltext"]
categories = ["science::geo", "text-processing"]

[features]
default = []
# Phase 7a-B — opt-in fastembed-rs (multilingual MiniLM ONNX) for
# transformer-based semantic rerank. Adds ort + tokenizers + the
# model file at runtime; per-place embedding storage grows from
# 32 dims (128 B) to 384 dims (1.5 KB).
# WASM target is excluded — ORT does not compile cleanly on wasm32.
# Operators flip on `cargo build --features semantic-onnx` and pass
# `--semantic-model <onnx-path>` to cairn-build / cairn-serve.
semantic-onnx = ["dep:fastembed"]

[dependencies]
cairn-place = { workspace = true }
tantivy = { workspace = true }
fst = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
deunicode = "1"
rphonetic = "3"
fastembed = { version = "5", optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "search"
harness = false
