[package]
name = "cairn-tile"
description = "Tile coordinate scheme and bundle manifest for the Cairn geocoder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cairn-place = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
rkyv = { workspace = true }
memmap2 = { workspace = true }
zstd = { workspace = true }
