[package]
name = "cairn-wasm"
description = "Browser-side autocomplete for the Cairn geocoder. WASM-compatible FST prefix lookup."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["geocoding", "geocoder", "wasm", "autocomplete", "fst"]
categories = ["science::geo", "wasm"]

# `cdylib` is what `wasm-pack` / `wasm-bindgen` expect as the build
# target type. `rlib` keeps native unit tests + downstream Rust
# consumers viable so the same logic doesn't fork between native and
# wasm builds.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fst = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# wasm-bindgen / web glue is only pulled when targeting wasm32. Native
# targets use the same crate as a plain Rust library — useful for
# integration tests that exercise the FST loader without a browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[features]
default = []
